--- a/app/css/main.css
+++ b/app/css/main.css
@@ -127,16 +127,18 @@ body {
   text-decoration: none;
 }
 .menu__item_facebook-theme {
-  color: #fff;
+  margin-right: 43px;
   font-size: 20px;
   font-weight: 400;
   line-height: 36.12px;
+  color: #fff;
 }
 .menu__item_twitter-theme {
-  color: #fff;
+  margin-right: 38px;
   font-size: 22px;
   font-weight: 400;
   line-height: 36.12px;
+  color: #fff;
 }
 .menu__item_icon-theme {
   padding-top: 5px;
