--- a/app/stylus/blocks/menu/menu.styl
+++ b/app/stylus/blocks/menu/menu.styl
@@ -16,16 +16,18 @@
       text-decoration none
 
     &_facebook-theme
-      color #ffffff
+      margin-right 43px
       font-size 20px
       font-weight 400
       line-height 36.12px
+      color #ffffff
 
     &_twitter-theme
-      color #ffffff
+      margin-right 38px
       font-size 22px
       font-weight 400
       line-height 36.12px
+      color #ffffff
 
     &_icon-theme
       padding-top 5px
